Brought back horizontal scrollbar for assoicated trecipes list Fix the misplaced authentication

--- a/packages/client/src/pages/Destination/DestinationPage.scss
+++ b/packages/client/src/pages/Destination/DestinationPage.scss
@@ -128,9 +128,5 @@
                 margin-left: 1rem;
             }
         }
-
-        ::-webkit-scrollbar {
-            width: 0;
-        }
     }
 }
